tests/snapshots/reader_test__airspaces_last_5.snap
---
source: tests/reader_test.rs
expression: "&airspaces[airspaces.len() - 5..]"
---
[
    Airspace {
        name: "Paris7",
        icao_code: None,
        points: [
            Point { lat: 0.8683015, lon: 0.024434458 },
            Point { lat: 0.8651014, lon: 0.022398144 },
            Point { lat: 0.8592838, lon: 0.021525666 },
            Point { lat: 0.85811996, lon: 0.022980329 },
            Point { lat: 0.85763043, lon: 0.02598127 },
            Point { lat: 0.85697585, lon: 0.026097387 },
            Point { lat: 0.8537666, lon: 0.024768962 },
            Point { lat: 0.850077, lon: 0.024876025 },
            Point { lat: 0.849229, lon: 0.022446614 },
            Point { lat: 0.8482058, lon: 0.021079838 },
            Point { lat: 0.8473088, lon: 0.020236123 },
            Point { lat: 0.8392173, lon: 0.021040956 },
            Point { lat: 0.83778715, lon: 0.024487723 },
            Point { lat: 0.8379134, lon: 0.026272096 },
            Point { lat: 0.83801997, lon: 0.027833289 },
            Point { lat: 0.8386213, lon: 0.02983072 },
            Point { lat: 0.8388051, lon: 0.03014072 },
            Point { lat: 0.83934355, lon: 0.030591875 },
            Point { lat: 0.84294534, lon: 0.0331129 },
            Point { lat: 0.8425336, lon: 0.050730783 },
            Point { lat: 0.83952785, lon: 0.05330028 },
            Point { lat: 0.8393143, lon: 0.056558486 },
            Point { lat: 0.84484583, lon: 0.06598317 },
            Point { lat: 0.84725076, lon: 0.06833907 },
            Point { lat: 0.84891844, lon: 0.06724875 },
            Point { lat: 0.8494905, lon: 0.06600235 },
            Point { lat: 0.849694, lon: 0.06510057 },
            Point { lat: 0.8499848, lon: 0.063815825 },
            Point { lat: 0.8506155, lon: 0.06382594 },
            Point { lat: 0.8570584, lon: 0.06390797 },
            Point { lat: 0.85969126, lon: 0.06776222 },
            Point { lat: 0.8649171, lon: 0.06572111 },
            Point { lat: 0.86827224, lon: 0.063884005 },
            Point { lat: 0.8676858, lon: 0.060819674 },
            Point { lat: 0.86684686, lon: 0.056485515 },
            Point { lat: 0.8658918, lon: 0.054206844 },
            Point { lat: 0.8657267, lon: 0.051947884 },
            Point { lat: 0.86697793, lon: 0.04856876 },
            Point { lat: 0.86629933, lon: 0.047889635 },
            Point { lat: 0.8641224, lon: 0.04727922 },
            Point { lat: 0.8634385, lon: 0.0454272 },
            Point { lat: 0.86277425, lon: 0.04363324 },
            Point { lat: 0.8645826, lon: 0.029074362 },
            Point { lat: 0.86622155, lon: 0.030087458 },
            Point { lat: 0.8683303, lon: 0.026810072 },
            Point { lat: 0.8683015, lon: 0.02443446 },
        ],
        bounding_box: Some(
            BoundingBox {
                left: 0.020236123,
                top: 0.8683303,
                right: 0.06833907,
                bottom: 0.83778715,
            },
        ),
        style: Unknown,
        class: ClassA,
        extended_type: None,
        min_alt: 1981,
        max_alt: 2591,
        min_alt_style: FlightLevel,
        max_alt_style: FlightLevel,
        start_date: None,
        end_date: None,
        days_active: DaysActive {
            bits: 0,
        },
        frequency: None,
        frequency_name: None,
        secondary_frequency: None,
        exception_rules: None,
        notam_id: None,
        notam_remarks: None,
        notam_insert_time: None,
        extra_data: 0,
    },
    Airspace {
        name: "CTA Limoges 119.200",
        icao_code: None,
        points: [
            Point { lat: 0.82174003, lon: 0.037854258 },
            Point { lat: 0.81220824, lon: 0.028943583 },
            Point { lat: 0.8130275, lon: 0.020255554 },
            Point { lat: 0.8101235, lon: 0.02021667 },
            Point { lat: 0.8104873, lon: 0.016008748 },
            Point { lat: 0.7996516, lon: 0.0009454489 },
            Point { lat: 0.7997438, lon: -0.0012751631 },
            Point { lat: 0.79751354, lon: -0.0027585886 },
            Point { lat: 0.7975141, lon: -0.0027564578 },
            Point { lat: 0.7974539, lon: -0.0027303584 },
            Point { lat: 0.79738516, lon: -0.0027037263 },
            Point { lat: 0.7973159, lon: -0.0026802886 },
            Point { lat: 0.7972456, lon: -0.0026611146 },
            Point { lat: 0.7971753, lon: -0.0026446022 },
            Point { lat: 0.7971045, lon: -0.0026318189 },
            Point { lat: 0.7970336, lon: -0.0026227627 },
            Point { lat: 0.7970336, lon: -0.0026227627 },
            Point { lat: 0.79412484, lon: 0.0016437508 },
            Point { lat: 0.79412484, lon: 0.018151592 },
            Point { lat: 0.78449136, lon: 0.022373896 },
            Point { lat: 0.78377867, lon: 0.018684773 },
            Point { lat: 0.7809961, lon: 0.018461594 },
            Point { lat: 0.7815634, lon: 0.025787108 },
            Point { lat: 0.7811996, lon: 0.03490658 },
            Point { lat: 0.7909055, lon: 0.03490658 },
            Point { lat: 0.79301, lon: 0.043633495 },
            Point { lat: 0.8068562, lon: 0.043633495 },
            Point { lat: 0.80738455, lon: 0.045184568 },
            Point { lat: 0.8073116, lon: 0.05109963 },
            Point { lat: 0.8086693, lon: 0.05090521 },
            Point { lat: 0.8159416, lon: 0.04945108 },
            Point { lat: 0.82174003, lon: 0.037854258 },
        ],
        bounding_box: Some(
            BoundingBox {
                left: -0.0027585898,
                top: 0.82174,
                right: 0.05109963,
                bottom: 0.7809961,
            },
        ),
        style: Unknown,
        class: ClassD,
        extended_type: None,
        min_alt: 3505,
        max_alt: 4420,
        min_alt_style: FlightLevel,
        max_alt_style: FlightLevel,
        start_date: None,
        end_date: None,
        days_active: DaysActive {
            bits: 0,
        },
        frequency: Some(
            119.2,
        ),
        frequency_name: None,
        secondary_frequency: None,
        exception_rules: None,
        notam_id: None,
        notam_remarks: None,
        notam_insert_time: None,
        extra_data: 0,
    },
    Airspace {
        name: "Paris9",
        icao_code: None,
        points: [
            Point { lat: 0.8698093, lon: 0.024502661 },
            Point { lat: 0.86977524, lon: 0.021913458 },
            Point { lat: 0.85925007, lon: 0.015925957 },
            Point { lat: 0.8581203, lon: 0.022980353 },
            Point { lat: 0.85763085, lon: 0.025981296 },
            Point { lat: 0.8569762, lon: 0.026097413 },
            Point { lat: 0.85376644, lon: 0.024768986 },
            Point { lat: 0.85007733, lon: 0.024876049 },
            Point { lat: 0.84922886, lon: 0.02244664 },
            Point { lat: 0.8482056, lon: 0.021079864 },
            Point { lat: 0.84730864, lon: 0.02023615 },
            Point { lat: 0.8448899, lon: 0.013191872 },
            Point { lat: 0.8424413, lon: 0.010631964 },
            Point { lat: 0.8365944, lon: 0.012929809 },
            Point { lat: 0.83511096, lon: 0.017928183 },
            Point { lat: 0.8360905, lon: 0.025123198 },
            Point { lat: 0.8379133, lon: 0.02627212 },
            Point { lat: 0.8380198, lon: 0.027833313 },
            Point { lat: 0.83862114, lon: 0.029830744 },
            Point { lat: 0.83880544, lon: 0.030140746 },
            Point { lat: 0.8393434, lon: 0.0305919 },
            Point { lat: 0.8429457, lon: 0.033112925 },
            Point { lat: 0.84253347, lon: 0.050730806 },
            Point { lat: 0.8395277, lon: 0.053300302 },
            Point { lat: 0.8358476, lon: 0.057314873 },
            Point { lat: 0.8394984, lon: 0.06623034 },
            Point { lat: 0.8457043, lon: 0.07122392 },
            Point { lat: 0.8472506, lon: 0.0683391 },
            Point { lat: 0.8489183, lon: 0.06724877 },
            Point { lat: 0.84949034, lon: 0.06600237 },
            Point { lat: 0.8496944, lon: 0.065100595 },
            Point { lat: 0.8499852, lon: 0.06381585 },
            Point { lat: 0.8506153, lon: 0.06382597 },
            Point { lat: 0.8570582, lon: 0.063907996 },
            Point { lat: 0.8596911, lon: 0.06776224 },
            Point { lat: 0.86403006, lon: 0.07419078 },
            Point { lat: 0.8691738, lon: 0.068649635 },
            Point { lat: 0.86827207, lon: 0.06388403 },
            Point { lat: 0.86684674, lon: 0.05648554 },
            Point { lat: 0.8658917, lon: 0.05420687 },
            Point { lat: 0.86572707, lon: 0.05194791 },
            Point { lat: 0.86697775, lon: 0.048568785 },
            Point { lat: 0.86629915, lon: 0.04788966 },
            Point { lat: 0.8641222, lon: 0.047279246 },
            Point { lat: 0.86343884, lon: 0.04542723 },
            Point { lat: 0.8627746, lon: 0.043633267 },
            Point { lat: 0.86458296, lon: 0.029074388 },
            Point { lat: 0.86622137, lon: 0.030087486 },
            Point { lat: 0.86833066, lon: 0.026810098 },
            Point { lat: 0.8698093, lon: 0.024502667 },
        ],
        bounding_box: Some(
            BoundingBox {
                left: 0.010631964,
                top: 0.86980927,
                right: 0.07419077,
                bottom: 0.83511096,
            },
        ),
        style: Unknown,
        class: ClassA,
        extended_type: None,
        min_alt: 2591,
        max_alt: 3505,
        min_alt_style: FlightLevel,
        max_alt_style: FlightLevel,
        start_date: None,
        end_date: None,
        days_active: DaysActive {
            bits: 0,
        },
        frequency: None,
        frequency_name: None,
        secondary_frequency: None,
        exception_rules: None,
        notam_id: None,
        notam_remarks: None,
        notam_insert_time: None,
        extra_data: 0,
    },
    Airspace {
        name: "Paris1",
        icao_code: None,
        points: [
            Point { lat: 0.8726647, lon: 0.01745355 },
            Point { lat: 0.8464845, lon: 0.01745355 },
            Point { lat: 0.8417673, lon: 0.013671746 },
            Point { lat: 0.8417673, lon: 0.023799524 },
            Point { lat: 0.8403761, lon: 0.02844422 },
            Point { lat: 0.8403761, lon: 0.03577932 },
            Point { lat: 0.83775806, lon: 0.043633223 },
            Point { lat: 0.83775806, lon: 0.06952207 },
            Point { lat: 0.8443853, lon: 0.06635653 },
            Point { lat: 0.8476627, lon: 0.06477084 },
            Point { lat: 0.85579306, lon: 0.060795687 },
            Point { lat: 0.86073816, lon: 0.058870696 },
            Point { lat: 0.8624932, lon: 0.05820648 },
            Point { lat: 0.8668471, lon: 0.056485493 },
            Point { lat: 0.87052184, lon: 0.055161864 },
            Point { lat: 0.8726647, lon: 0.054395914 },
            Point { lat: 0.8726647, lon: 0.017453548 },
        ],
        bounding_box: Some(
            BoundingBox {
                left: 0.013671746,
                top: 0.87266463,
                right: 0.06952207,
                bottom: 0.83775806,
            },
        ),
        style: Unknown,
        class: ClassE,
        extended_type: None,
        min_alt: 1067,
        max_alt: 3505,
        min_alt_style: MeanSeaLevel,
        max_alt_style: FlightLevel,
        start_date: None,
        end_date: None,
        days_active: DaysActive {
            bits: 0,
        },
        frequency: None,
        frequency_name: None,
        secondary_frequency: None,
        exception_rules: None,
        notam_id: None,
        notam_remarks: None,
        notam_insert_time: None,
        extra_data: 0,
    },
    Airspace {
        name: "Paris1",
        icao_code: None,
        points: [
            Point { lat: 0.8726647, lon: 0.01745355 },
            Point { lat: 0.8464845, lon: 0.01745355 },
            Point { lat: 0.8417673, lon: 0.013671746 },
            Point { lat: 0.8417673, lon: 0.023799524 },
            Point { lat: 0.8403761, lon: 0.02844422 },
            Point { lat: 0.8403761, lon: 0.03577932 },
            Point { lat: 0.83775806, lon: 0.043633223 },
            Point { lat: 0.83775806, lon: 0.06952207 },
            Point { lat: 0.8443853, lon: 0.06635653 },
            Point { lat: 0.8476627, lon: 0.06477084 },
            Point { lat: 0.85579306, lon: 0.060795687 },
            Point { lat: 0.86073816, lon: 0.058870696 },
            Point { lat: 0.8624932, lon: 0.05820648 },
            Point { lat: 0.8668471, lon: 0.056485493 },
            Point { lat: 0.87052184, lon: 0.055161864 },
            Point { lat: 0.8726647, lon: 0.054395914 },
            Point { lat: 0.8726647, lon: 0.017453548 },
        ],
        bounding_box: Some(
            BoundingBox {
                left: 0.013671746,
                top: 0.87266463,
                right: 0.06952207,
                bottom: 0.83775806,
            },
        ),
        style: Unknown,
        class: ClassD,
        extended_type: None,
        min_alt: 3505,
        max_alt: 5944,
        min_alt_style: FlightLevel,
        max_alt_style: FlightLevel,
        start_date: None,
        end_date: None,
        days_active: DaysActive {
            bits: 0,
        },
        frequency: None,
        frequency_name: None,
        secondary_frequency: None,
        exception_rules: None,
        notam_id: None,
        notam_remarks: None,
        notam_insert_time: None,
        extra_data: 0,
    },
]
