tests/snapshots/reader_test__class_counts.snap
---
source: tests/reader_test.rs
expression: class_counts
---
[
    (
        Unknown,
        836,
    ),
    (
        ClassD,
        377,
    ),
    (
        ClassE,
        110,
    ),
    (
        ClassC,
        36,
    ),
    (
        ClassA,
        9,
    ),
]
