tests/snapshots/reader_test__first_airspace.snap
---
source: tests/reader_test.rs
expression: first_airspace
---
Airspace {
    bounding_box: Some(
        BoundingBox {
            left: 0.033180647,
            top: 0.83466476,
            right: 0.033224326,
            bottom: 0.8346504,
        },
    ),
    style: RestrictedArea,
    class: Unknown,
    extended_type: None,
    min_alt: 0,
    max_alt: 488,
    min_alt_style: AboveGroundLevel,
    max_alt_style: MeanSeaLevel,
    time_out: 0,
    start_date: None,
    end_date: None,
    extra_data: 0,
    days_active: DaysActive {
        bits: 0,
    },
    points: [
        Point { lat: 0.83465517, lon: 0.033180647 },
        Point { lat: 0.8346504, lon: 0.033224326 },
        Point { lat: 0.83466476, lon: 0.03319982 },
        Point { lat: 0.83465517, lon: 0.033180647 },
    ],
    name: Some(
        "R265 LA GREMUSE",
    ),
    frequency_name: None,
    icao_code: None,
    exception_rules: None,
    notam_remarks: None,
    notam_id: None,
    frequency: None,
    secondary_frequency: None,
    notam_insert_time: None,
}
