tests/snapshots/reader_test__first_item_points.snap
---
source: tests/reader_test.rs
expression: points
---
[
    ParsedPoint {
        lon: 0.033180647,
        lat: 0.83465517,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.033224326,
        lat: 0.8346504,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.03319982,
        lat: 0.83466476,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.033180647,
        lat: 0.83465517,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.0332435,
        lat: 0.8346504,
        name: Some(
            "USE\u{1}\u{1b}\0R\0\u{1}\0\0\u{1b}",
        ),
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.033258412,
        lat: 0.83467966,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.03319503,
        lat: 0.8346941,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
]
