tests/snapshots/reader_test__items_first_5.snap
---
source: tests/reader_test.rs
expression: "&items[0..5]"
---
[
    Item {
        left: 0.033180647,
        top: 0.83466476,
        right: 0.033224326,
        bottom: 0.8346504,
        type_byte: 2,
        alt_style_byte: 33,
        min_alt: 0,
        max_alt: 488,
        points_offset: 0,
        time_out: 0,
        extra_data: 0,
        active_time: 0,
        extended_type_byte: 0,
    },
    Item {
        left: 0.039682,
        top: 0.85236555,
        right: 0.039759766,
        bottom: 0.85232186,
        type_byte: 3,
        alt_style_byte: 33,
        min_alt: 0,
        max_alt: 610,
        points_offset: 40,
        time_out: 0,
        extra_data: 0,
        active_time: 0,
        extended_type_byte: 0,
    },
    Item {
        left: 0.099705316,
        top: 0.7667715,
        right: 0.099785745,
        bottom: 0.76671344,
        type_byte: 3,
        alt_style_byte: 49,
        min_alt: 0,
        max_alt: 5944,
        points_offset: 80,
        time_out: 0,
        extra_data: 0,
        active_time: 0,
        extended_type_byte: 0,
    },
    Item {
        left: 0.093006656,
        top: 0.8027499,
        right: 0.09311798,
        bottom: 0.8026769,
        type_byte: 2,
        alt_style_byte: 33,
        min_alt: 0,
        max_alt: 1067,
        points_offset: 1005,
        time_out: 0,
        extra_data: 0,
        active_time: 0,
        extended_type_byte: 0,
    },
    Item {
        left: 0.03643375,
        top: 0.851842,
        right: 0.03662763,
        bottom: 0.8517546,
        type_byte: 2,
        alt_style_byte: 33,
        min_alt: 0,
        max_alt: 457,
        points_offset: 1052,
        time_out: 0,
        extra_data: 0,
        active_time: 0,
        extended_type_byte: 0,
    },
]
