tests/snapshots/reader_test__items_last_5.snap
---
source: tests/reader_test.rs
expression: "&items[items.len() - 5..]"
---
[
    Item {
        left: 0.020236123,
        top: 0.8683303,
        right: 0.06833907,
        bottom: 0.83778715,
        type_byte: 16,
        alt_style_byte: 51,
        min_alt: 1981,
        max_alt: 2591,
        points_offset: 368529,
        time_out: 0,
        extra_data: 0,
        active_time: 0,
        extended_type_byte: 0,
    },
    Item {
        left: -0.0027585898,
        top: 0.82174,
        right: 0.05109963,
        bottom: 0.7809961,
        type_byte: 64,
        alt_style_byte: 51,
        min_alt: 3505,
        max_alt: 4420,
        points_offset: 368790,
        time_out: 0,
        extra_data: 0,
        active_time: 0,
        extended_type_byte: 0,
    },
    Item {
        left: 0.010631964,
        top: 0.86980927,
        right: 0.07419077,
        bottom: 0.83511096,
        type_byte: 16,
        alt_style_byte: 51,
        min_alt: 2591,
        max_alt: 3505,
        points_offset: 369014,
        time_out: 0,
        extra_data: 0,
        active_time: 0,
        extended_type_byte: 0,
    },
    Item {
        left: 0.013671746,
        top: 0.87266463,
        right: 0.06952207,
        bottom: 0.83775806,
        type_byte: 80,
        alt_style_byte: 50,
        min_alt: 1067,
        max_alt: 3505,
        points_offset: 369305,
        time_out: 0,
        extra_data: 0,
        active_time: 0,
        extended_type_byte: 0,
    },
    Item {
        left: 0.013671746,
        top: 0.87266463,
        right: 0.06952207,
        bottom: 0.83775806,
        type_byte: 64,
        alt_style_byte: 51,
        min_alt: 3505,
        max_alt: 5944,
        points_offset: 369431,
        time_out: 0,
        extra_data: 0,
        active_time: 0,
        extended_type_byte: 0,
    },
]
